--- a/sidebar-01/index_socials.html
+++ b/sidebar-01/index_socials.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>JAYY Motion</title>
+  <title>JAYY Motion Sidebar</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
@@ -91,7 +91,7 @@
         <div class="online__status"></div>
       </div>
       <section class="avatar__name hide">
-        <div class="user-name">Ananda Jaya</div>
+        <div class="user-name">Ananda Jaya Sinaga</div>
         <div class="email">anandasinaga3@gmail.com</div>
       </section>
       <a href="#logout" class="logout">
